# tennis-bassoon

./: .dockerignore  .env.example  .gitignore  BACKTEST_TRUST_CHECKLIST.md  Dockerfile  RAILWAY_DEPLOY.md  README.md  TENNIS_HYPOTHESIS.md  TENNIS_PIPELINE_PLAN.md  config_tennis.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
data/tennis/features/: rankings.parquet
data/tennis/model/: tennis_feature_medians.pkl  tennis_model_metadata.json  tennis_scaler_holdout.pkl  tennis_xgb_holdout.pkl
data/tennis/model/promoted/: promotion_manifest.json
data/tennis/raw/: tennis_data_2026.xlsx
scripts/: prepare_runtime_data.py  railway_close_snapshot.sh  railway_shadow.sh  run_shadow.py  run_shadow_and_close.py
src/: cli.py
src/data/: tennis_odds.py  tennis_odds_api.py  tennis_sackmann.py  tennis_tml.py
src/features/: tennis_engineer.py
src/model/: tennis_backtest_2026_ytd.py  tennis_bundle.py  tennis_calibration.py  tennis_clv.py  tennis_edge_diagnostics.py  tennis_evaluate.py  tennis_holdout_suite.py  tennis_oos_report.py  tennis_recent_holdout.py  tennis_train.py
src/pipeline/: tennis_daily_run.py  tennis_odds_matcher.py  tennis_results.py  tennis_shadow_ledger.py
src/runtime/: __init__.py  config.py  logging.py  notifications.py  storage.py
tennis_bassoon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_daily_run.py  test_features_pre_match.py  test_odds_matcher.py  test_prepare_runtime_data.py  test_run_shadow_schedule.py  test_runtime_config.py
(+20 files in other folders)
